--- a/css/all.css
+++ b/css/all.css
@@ -4,3 +4,4 @@
 @import url('./components/carousel.css');
 @import url('./components/xbox.css');
 @import url('./components/footer.css');
+@import url('./components/game.css');
