--- a/css/components/xbox.css
+++ b/css/components/xbox.css
@@ -173,3 +173,20 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
+
+@media (max-width: 1163px) {
+    .xbox-cards{
+        padding: 10px 0;
+    }
+}
+
+@media (max-width: 994px) {
+    .xbox-cards{
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .game-cards{
+        flex-direction: row;
+    }
+}
